--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,36 @@
 	font-style: normal;
 }
 
+body {
+	margin: 0;
+	background: #333;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	overflow: hidden;
+}
+
+.main-menu {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: aliceblue;
+}
+
 .container {
+	display: none;
 	text-align: center;
+	height: 100%;
+	width: 100%;
+}
+
+.container.visible {
+	display: flex;
+	flex-direction: column;
 }
 
 .board {
@@ -37,4 +65,16 @@
 	border: 1px solid grey;
 	background: #e6be60;
 	cursor: pointer;
+}
+
+.test {
+	background-color: red;
+	width: 100%;
+	height: 100px;
+}
+
+.hidden {
+	visibility: hidden;
+	opacity: 0;
+	display: none;
 }
