--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,32 @@ body {
 	height: 100vh;
 	overflow: hidden;
 }
-
+/* MAIN MENU  */
 .main-menu {
 	height: 100%;
 	width: 100%;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	background-color: aliceblue;
+	color: black;
 }
 
+.main-menu.hidden {
+	visibility: hidden;
+	opacity: 0;
+	display: none;
+}
+
+.player-info {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	height: 300px;
+}
+
+/* GAME SCREEN */
 .container {
 	display: none;
 	text-align: center;
@@ -65,16 +81,4 @@ body {
 	border: 1px solid grey;
 	background: #e6be60;
 	cursor: pointer;
-}
-
-.test {
-	background-color: red;
-	width: 100%;
-	height: 100px;
-}
-
-.hidden {
-	visibility: hidden;
-	opacity: 0;
-	display: none;
 }
